# rbxex

app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/hooks/: bypass.cpp  bypass.h  luau_hook.cpp
app/src/main/cpp/lua/: executor.cpp  executor.h  lua_types.h
app/src/main/cpp/utils/: memory.cpp  memory.h  offsets.h
app/src/main/java/com/rbxex/app/: Bridge.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
injector/: patch_apk.py
